--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,80 @@
-asgiref==3.2.3
-beautifulsoup4==4.8.2
-bs4==0.0.1
-certifi==2019.11.28
+appnope==0.1.0
+astroid==2.2.5
+attrs==19.2.0
+backcall==0.1.0
+bleach==3.1.0
+certifi==2019.9.11
 chardet==3.0.4
-Django==3.0.2
+decorator==4.4.0
+defusedxml==0.6.0
+dj-database-url==0.5.0
+Django==2.2.6
+django-allauth==0.40.0
+django-extensions==2.2.3
+django-faker==0.2
+django-heroku==0.3.1
+django-polls==0.1
+django-rest-auth==0.9.5
+djangorestframework==3.10.3
+entrypoints==0.3
+fake-factory==9999.9.9
+gunicorn==20.0.4
 idna==2.8
+ipykernel==5.1.2
+ipython==7.8.0
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+isort==4.3.21
+jedi==0.15.1
+Jinja2==2.10.3
+jsonschema==3.0.2
+jupyter==1.0.0
+jupyter-client==5.3.3
+jupyter-console==6.0.0
+jupyter-core==4.6.0
+lazy-object-proxy==1.4.2
+MarkupSafe==1.1.1
+mccabe==0.6.1
+mistune==0.8.4
+nbconvert==5.6.0
+nbformat==4.4.0
+notebook==6.0.1
+numpy==1.17.2
+oauthlib==3.1.0
+pandas==0.25.1
+pandocfilters==1.4.2
+parso==0.5.1
+pexpect==4.7.0
+pickleshare==0.7.5
+prometheus-client==0.7.1
+prompt-toolkit==2.0.9
+psycopg2==2.8.3
+ptyprocess==0.6.0
+Pygments==2.4.2
+pylint==2.3.1
+pyrsistent==0.15.4
+python-dateutil==2.8.0
+python3-openid==3.1.0
 pytz==2019.3
+pyzmq==18.1.0
+qtconsole==4.5.5
 requests==2.22.0
-soupsieve==1.9.5
+requests-oauthlib==1.3.0
+Send2Trash==1.5.0
+shell==1.0.1
+six==1.12.0
+spoonacular==3.0
 sqlparse==0.3.0
-urllib3==1.25.7
+terminado==0.8.2
+testpath==0.4.2
+ticketpy==1.1.2
+tornado==6.0.3
+traitlets==4.3.2
+typed-ast==1.4.0
+urllib3==1.25.6
+virtualenv==16.7.9
+wcwidth==0.1.7
+webencodings==0.5.1
+whitenoise==4.1.4
+widgetsnbextension==3.5.1
+wrapt==1.11.2
